@@ -38,14 +38,22 @@ fi
 
 # default heap for corfudb
 CORFUDB_HEAP="${CORFUDB_HEAP:-2000}"
-export JVMFLAGS="-Xmx${CORFUDB_HEAP}m $SERVER_JVMFLAGS"
+CORFUDB_GC_FLAGS="-XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:/var/log/corfu.gc.log"
+export JVMFLAGS="-Xmx${CORFUDB_HEAP}m $CORFUDB_GC_FLAGS $SERVER_JVMFLAGS"
+
+# yourkit profiler setup for corfu server
+if [ -f /usr/yourkit/bin/libyjpagent.so ] && [ -n $CORFU_ENABLE_PROFILER ]; then
+    PROFILER_AGENT="-agentpath:/usr/yourkit/bin/libyjpagent.so=port=54322,dir=/var/log,snapshot_name_format=corfu-{sessionname}-{datetime}-{pid}"
+else
+    PROFILER_AGENT=""
+fi
 
 while true; do
-"$JAVA" -cp "$CLASSPATH" $JVMFLAGS org.corfudb.infrastructure.CorfuServer $*
-JAVA_RET_CODE=$?
-# watchdog: only exit on INTERNAL_ERROR (1), SIGHUP (129), SIGINT (130), SIGKILL (137) and SIGTERM (143)
-EXIT_CONDITION="1 129 130 137 143"
-if [[ " $EXIT_CONDITION " =~ " $JAVA_RET_CODE " ]]; then
-break
-fi
+    "$JAVA" ${PROFILER_AGENT} -cp "$CLASSPATH" $JVMFLAGS org.corfudb.infrastructure.CorfuServer $*
+    JAVA_RET_CODE=$?
+    # watchdog: only exit on INTERNAL_ERROR (1), SIGHUP (129), SIGINT (130), SIGKILL (137) and SIGTERM (143)
+    EXIT_CONDITION="1 129 130 137 143"
+    if [[ " $EXIT_CONDITION " =~ " $JAVA_RET_CODE " ]]; then
+        break
+    fi
 done
